src/app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

body {
  font-family: Arial, Helvetica, sans-serif;
}

*:focus-visible {
  outline: none;
  border-radius: 0.25rem;
  box-shadow: 0 0 0 3px hsl(212, 80%, 69%);
}

@layer utilities {
  .text-balance {
    text-wrap: balance;
  }
}

code[class*="language-"],
pre[class*="language-"] {
  color: #ccc;
  background: none;
  /* font-family: Consolas, Monaco, "Andale Mono", "Ubuntu Mono", monospace; */
  text-align: left;
  white-space: pre;
  word-spacing: normal;
  word-break: normal;
  word-wrap: normal;
  line-height: 1.5;

  -moz-tab-size: 4;
  -o-tab-size: 4;
  tab-size: 4;

  -webkit-hyphens: none;
  -moz-hyphens: none;
  -ms-hyphens: none;
  hyphens: none;
}

/* Code blocks */
pre[class*="language-"] {
  padding: 1em;
  margin: 1rem 0 2.5rem;
  overflow: auto;
}

:not(pre) > code[class*="language-"],
pre[class*="language-"] {
  background: #2d2d2d;
}

/* Inline code */
:not(pre) > code[class*="language-"] {
  padding: 0.1em;
  border-radius: 0.3em;
  white-space: normal;
}

.token.comment,
.token.block-comment,
.token.prolog,
.token.doctype,
.token.cdata {
  color: #999;
}

.token.punctuation {
  color: #ccc;
}

.token.tag,
.token.attr-name,
.token.namespace,
.token.deleted {
  color: #e2777a;
}

.token.function-name {
  color: #6196cc;
}

.token.boolean,
.token.number,
.token.function {
  color: #f08d49;
}

.token.property,
.token.class-name,
.token.constant,
.token.symbol {
  color: #f8c555;
}

.token.selector,
.token.important,
.token.atrule,
.token.keyword,
.token.builtin {
  color: #cc99cd;
}

.token.string,
.token.char,
.token.attr-value,
.token.regex,
.token.variable {
  color: #7ec699;
}

.token.operator,
.token.entity,
.token.url {
  color: #67cdcc;
}

.token.important,
.token.bold {
  font-weight: bold;
}
.token.italic {
  font-style: italic;
}

.token.entity {
  cursor: help;
}

.token.inserted {
  color: green;
}

@layer base {
  :root {
    --gradient: linear-gradient(to top left, #56a5cd, #0068bd);
    --background: 210, 56%, 5%;
    --foreground: 212 8% 98.45%;
    --muted: 212 40% 20.7%;
    --muted-foreground: 212 8% 56.9%;
    --popover: 212 49% 8.969999999999999%;
    --popover-foreground: 212 8% 98.45%;
    --card: 212 49% 8.969999999999999%;
    --card-foreground: 212 8% 98.45%;
    --border: 212 40% 20.7%;
    --input: 212 40% 20.7%;
    --primary: 212 80% 69%;
    --primary-foreground: 212 8% 6.8999999999999995%;
    --secondary: 212 80% 32.43%;
    --secondary-foreground: 212 8% 98.45%;
    --accent: 200 58% 54%;
    --accent-darker: 200 20% 5%;
    --accent-foreground: 212 8% 98.45%;
    --destructive: 0 62.8% 30.6%;
    --destructive-foreground: 212 8% 98.45%;
    --ring: 212 80% 69%;
    --radius: 0.5rem;

    --max-layout-width: 1440px;
    --sidebar-size: 272px;
  }
  .dark {
    --gradient: linear-gradient(to top left, #56a5cd, #0068bd);
    --background: 210, 56%, 5%;
    --foreground: 212 8% 98.45%;
    --muted: 212 40% 20.7%;
    --muted-foreground: 212 8% 56.9%;
    --popover: 212 49% 8.969999999999999%;
    --popover-foreground: 212 8% 98.45%;
    --card: 212 49% 8.969999999999999%;
    --card-foreground: 212 8% 98.45%;
    --border: 212 40% 20.7%;
    --input: 212 40% 20.7%;
    --primary: 212 80% 69%;
    --primary-foreground: 212 8% 6.8999999999999995%;
    --secondary: 212 80% 32.43%;
    --secondary-foreground: 212 8% 98.45%;
    --accent: 200 58% 54%;
    --accent-darker: 200 20% 5%;
    --accent-foreground: 212 8% 98.45%;
    --destructive: 0 62.8% 30.6%;
    --destructive-foreground: 212 8% 98.45%;
    --ring: 212 80% 69%;
  }
}

@layer base {
  * {
    @apply border-border;
  }
  body {
    @apply bg-background text-foreground;
  }
}

.cat-other {
  background-color: #0050c7;
}
.cat-code {
  background-color: #d04924;
}
.cat-security {
  background-color: #990015;
}
.cat-hardware {
  background-color: #0e671a;
}

.sidebar {
  width: calc(var(--sidebar-size) - 16px);
}

.article-content a {
  color: hsl(var(--primary));
  font-weight: 600;
}
.article-content a:hover {
  text-decoration: underline;
  text-underline-offset: 0.2rem;
}

.article-content h1,
h2,
h3 {
  font-weight: bold;
}
.article-content h1 {
  font-size: 2.25rem;
}
.article-content h2 {
  font-size: 1.75rem;
}
.article-content h3 {
  font-size: 1.5rem;
}

@media screen and (max-width: 768px) {
  .article-padding {
    padding: 0px;
  }
}

@media screen and (min-width: 1024px) {
  .article-padding {
    padding: 32px 16px 32px;
    padding-left: var(--sidebar-size);
  }
  .sidebar {
    padding: 8px 32px 96px;
    margin-top: 64px;
  }
}

@media screen and (min-width: 1440px) {
  .sidebar {
    padding: 8px 16px 96px;
    padding-left: max(32px, calc((100% - var(--max-layout-width) + 64px) / 2));
    width: calc(
      (100% - (var(--max-layout-width) - 64px)) / 2 + var(--sidebar-size) - 32px
    );
  }

  .article-padding {
    padding-left: calc(
      (100vw - var(--max-layout-width)) / 2 + var(--sidebar-size) + 16px
    );
    padding-right: calc((100vw - var(--max-layout-width)) / 2 + 16px);
  }
}

